--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,6 +2,7 @@
 	editor = vim
 	pager = diff-so-fancy | less --tabs=4 -RFX
 [user]
+	email = sushant.nigalye@mercedes-benz.com
 	name = Sushant Nigalye
 [fetch]
 	prune = true
@@ -26,3 +27,6 @@
 	whitespace = red reverse
 [init]
 	templateDir = /Users/snigaly/.git-template
+  defaultBranch = main
+[credential "github.com"]
+	useHttpPath = true
